--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.11.3",
     "next": "14.2.15",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
